# EpicEngine

./: CMakeLists.txt  EpicEngine.cpp  EpicEngine.h  MarchingCubes.cpp  MarchingCubes.h  Object.h  PerlinNoise.cpp  PerlinNoise.h  PostProcessing.cpp  PostProcessing.h  README.md  camera.cpp  camera.h  imGuiHandler.cpp  imGuiHandler.h  inputHandler.cpp  inputHandler.h  mesh.cpp  mesh.h  model.cpp  model.h  shaderClass.h  todo.txt
Lights/: DirectionalLight.cpp  DirectionalLight.h  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
dependencies/glad/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dependencies/stb_image/: CMakeLists.txt
models/: mesh.h  model.h
models/LightCube/: LightCube.mtl
models/TexturedCube/: cube.mtl
models/cube/: test.fbx
models/plane/: plane.mtl
shaders/: blinnPhongFrag.glsl  blinnPhongVert.glsl  postProcessingFrag.glsl  postProcessingVert.glsl  shaderClass.h  showLight.glsl  skyboxVert.glsl
